--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header{
     background-color:blueviolet;
 }
 
-section {
+#article {
     background-color: grey;
     padding: 10px;
     border-style: solid;
@@ -68,4 +68,36 @@ footer {
     border-top-width: 0px;
     width: auto;
     height: 40px;
+}
+
+.row {
+    border: solid 2px;
+    display: flex; 
+    flex-direction: column;
+    padding: 10px;
+}
+.container2 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+#contact {
+    background-color: grey;
+    padding: 10px;
+    border-style: solid;
+    border-left-width: 2px;
+    border-bottom-width: 2px;
+    border-right-width: 2px;
+    border-top-width: 0px;
+    width: auto;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+}
+
+.photo  {
+    width: 20vw;
+    height: 20vw;
 }
