--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ header{
     padding: 10px;
     border-style: solid;
     border-width: 2px;
-    position: f;
+    position: sticky;
+    top: 0;
 }
 
 .container {
@@ -45,10 +46,6 @@ header{
     border-color: black;
     border-radius: 5px;
 }
-
-/* #login:hover {
-    background-color:blueviolet;
-} */
 
 #article {
     background-color: grey;
@@ -241,3 +238,13 @@ footer {
     border-color:aquamarine;
 }
 
+.find-us-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#logo-footer {
+    height: 10vw;
+    width: 10vw;
+}
